# Luisa-Realtime-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui_test.cpp  main.cpp
data/scenes/fruits/: Apples_Pears.mtl  fruits.scene
data/scenes/fruits/textures/: convert.py
data/scenes/pink/: pink_room.mtl  pink_room.scene
data/scenes/sun_temple/: SunTemple.mtl  SunTemple.scene  SunTemple.scene.new  SunTemple.scene.new.new
data/scenes/sun_temple/Textures/: convert.py
data/shaders/: ggx_approx.fs
src/core/: CMakeLists.txt  camera.h  camera_animator.cpp  camera_animator.h  common.h  framebuffer.h  scene.cpp  scene.h  serialize.h  shader.h  texture_packer.cpp  texture_packer.h  util.h
