cmake_minimum_required(VERSION 3.12)
project(Luisa-Realtime-Renderer)

set(CMAKE_CXX_STANDARD 17)

set(BUILD_STATIC_LIBS ON)
set(BUILD_SHARED_LIBS OFF)

if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build (Debug or Release)" FORCE)
endif (NOT CMAKE_BUILD_TYPE)

set(GLM_QUIET ON CACHE BOOL "" FORCE)
set(GLM_TEST_ENABLE_CXX_17 ON CACHE BOOL "" FORCE)
include_directories(thirdparty/glm)
add_subdirectory(thirdparty/glm)
link_libraries(glm_static)

set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
include_directories(thirdparty/glfw/include)
add_subdirectory(thirdparty/glfw)
link_libraries(glfw)

include_directories(thirdparty/stb/repo)
add_subdirectory(thirdparty/stb)
link_libraries(stb)

include_directories(thirdparty/glad/include)
add_subdirectory(thirdparty/glad)
link_libraries(glad)

include_directories(thirdparty/tinyexr/repo)
add_subdirectory(thirdparty/tinyexr)
link_libraries(tinyexr)

set(BUILD_FRAMEWORK OFF CACHE BOOL "" FORCE)
set(ASSIMP_DOUBLE_PRECISION OFF CACHE BOOL "" FORCE)
set(ASSIMP_OPT_BUILD_PACKAGES OFF CACHE BOOL "" FORCE)
set(ASSIMP_ANDROID_JNIIOSYSTEM OFF CACHE BOOL "" FORCE)
set(ASSIMP_NO_EXPORT ON CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_ZLIB OFF CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_SAMPLES OFF CACHE BOOL "" FORCE)
set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(ASSIMP_COVERALLS OFF CACHE BOOL "" FORCE)
set(ASSIMP_WERROR OFF CACHE BOOL "" FORCE)
set(ASSIMP_ASAN OFF CACHE BOOL "" FORCE)
set(ASSIMP_UBSAN OFF CACHE BOOL "" FORCE)
set(SYSTEM_IRRXML OFF CACHE BOOL "" FORCE)
set(BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(INJECT_DEBUG_POSTFIX OFF CACHE BOOL "" FORCE)
set(IGNORE_GIT_HASH OFF CACHE BOOL "" FORCE)
include_directories(thirdparty/assimp/include)
add_subdirectory(thirdparty/assimp)
link_libraries(assimp)

set(DEBUG OFF CACHE BOOL "" FORCE)
set(CMAKE_CXX_STANDARD 11)
include_directories(thirdparty/glsl-optimizer/src)
add_subdirectory(thirdparty/glsl-optimizer)
link_libraries(glsl_optimizer)
set(CMAKE_CXX_STANDARD 17)

include_directories(thirdparty/imgui/repo)
include_directories(thirdparty/imgui/repo/examples)
add_subdirectory(thirdparty/imgui)
link_libraries(imgui)

include_directories(src)
add_subdirectory(src/core)
link_libraries(core)

add_executable(LuisaVR main.cpp)
add_executable(ImGuiTest imgui_test.cpp)